--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "env": "^0.0.2",
     "express": "^4.18.0",
-    "module": "^1.2.5",
-    "mongoose": "^6.3.1",
-    "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
+    "mongoose": "^6.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
