--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "nodemailer": "^6.7.4",
+    "nodemailer-express-handlebars": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
