--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "nodemailer": "^6.7.4",
-    "nodemailer-express-handlebars": "^5.0.0"
+    "nodemailer-express-handlebars": "^5.0.0",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "pdf-creator-node": "^2.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
